Replace placeholder text with 1st draft

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -8,56 +8,463 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "365 days. Two funds. 200+ grants. Billions of sats."
 ---
 
-The text will come. It will come. In due course.
+Twenty-twenty-four. What a year! A lot has happened in the past 12 months, and
+just like last year, we want to take the opportunity to pause, reflect, and
+share our year in review. We want to look back at the announcements we made,
+share an update in regards to the donations we received, and give an overview of
+how we allocated our funds.
 
 ## Announcements
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+At the beginning of the year, we announced long-term support for [René
+Pickhardt](/blog/rene-pickhardt-receives-lts-grant) and
+[0xB10C](/blog/0xB10C-receives-lts-grant), two researchers/developers with a
+major track record, both doing important work related to bitcoin infrastructure.
+Soon after we announced long-term support for [Bruno
+Garcia](/blog/bruno-garcia-receives-lts-grant), another developer that qualifies
+as a [load-bearing internet
+person](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+by our estimation. In May [Shashwat
+Vangani](/blog/shashwat-vangani-receives-lts-grant) joined our roster of LTS
+grantees, followed by [Calle](/blog/cashu-calle-receives-lts-grant) in June, and
+[Jon Atack](/blog/jon-atack-receives-lts-grant) & [Jason
+Donenfeld](/blog/jason-donenfeld-lts-grant) in September.  The last two
+long-term support grants in 2024 were awarded to [Dusty
+Daemon](/blog/dusty-daemon-receives-lts-grant) and
+[m1sterc001guy](/blog/m1sterc001guy-receives-lts-grant), as announced in October
+and November, respectively. This brings the total number of grantees receiving
+long-term support from our General Fund to 18, adding to the 9 announced in 2023
+([Vasil](/blog/vasil-dimov-receives-lts-grant),
+[Gleb](/blog/gleb-naumenko-receives-lts-grant),
+[Matt](/blog/matt-morehouse-lightning-security-lts-grant),
+[Furszy](/blog/furszy-receives-lts-grant-for-bitcoin-core),
+[Marco](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
+[Josi](/blog/josi-baker-receives-opensats-lts-grant),
+[Sjors](/blog/sjors-provoost-receives-opensats-lts-grant),
+[Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core), and
+[Tobin](/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin)).
+
+Speaking of long-term support, in March we announced the expansion of our LTS
+program to provide [long-term support for nostr
+developers](/blog/nostr-lts-long-term-support-for-nostr-developers) also, which
+we promptly awarded to [PabloF7z](/blog/pablofz7-receives-lts-grant), [Stuart
+Bowman](/blog/stuart-bowman-receives-lts-grant), and
+[hzrd149](/blog/hzrd149-receives-lts-grant) in April, [William
+Casarin](/blog/jb55-receives-lts-grant) aka jb55 in June, [Yuki
+Kishimoto](/blog/yuki-receives-lts-grant),
+[Hodlbod](/blog/hodlbod-receives-lts-grant), and
+[fiatjaf](/blog/fiatjaf-receives-lts-grant) in July,
+[Kieran](/blog/kieran-receives-lts-grant),
+[Vitor](/blog/vitor-pamplona-receives-lts-grant),
+[Daniele](/blog/daniele-receives-lts-grant), and [Alex
+Gleason](/blog/alex-gleason-receives-lts-grant) in August, [Mike
+Dilger](/blog/mike-dilger-receives-lts-grant) in September, and
+[Greenart7c3](/blog/greenart7c3-receives-lts-grant) in October. In addition to
+these nostr LTS grants, we announced 5 waves of nostr grants—in
+[July](/blog/nostr-grants-july-2024), [August](/blog/nostr-grants-august-2024),
+[September](/blog/7th-wave-of-nostr-grants),
+[November](/blog/8th-wave-nostr-grants), and
+[December](/blog/9th-wave-of-nostr-grants)—giving a total of 35 grants to some
+of the most impactful projects in the nostr ecosystem. We also shared some
+[highlights of
+#nostrdesign](/blog/nostr-design-highlights-may) and
+recently committed to [doubling down on nostr](/blog/doubling-down-on-nostr).
+
+In addition to these LTS and nostr grants, we announced [5 waves of bitcoin
+grants](/tags/wave), giving short- and medium-term grants to 37 high-impact
+open-source projects in the bitcoin space. We announced these waves of grants in
+[February](/blog/bitcoin-grants-feb-2024),
+[June](/blog/bitcoin-grants-july-2024),
+[July](/blog/bitcoin-grants-july-2024-6th-wave),
+[September](/blog/bitcoin-grants-september-2024-7th-wave), and
+[October](/blog/8th-wave-of-bitcoin-grants), respectively. In July we also
+announced the launch of the [OpenSats Education
+Initiative](/blog/announcing-the-opensats-education-initiative), ensuring that
+one of the key aspects of [our mission](/mission) is made explicit: education
+and outreach about freedom tech in general, and bitcoin in particular. The
+launch of our education initiative was a great success, with dozens of
+education-specific applications received, and [13 high-impact educational
+initiatives funded](/tags/education), as announced in
+[July](/blog/announcing-the-opensats-education-initiative),
+[September](/blog/second-wave-of-education-grants), and
+[November](/blog/3rd-wave-of-education-grants), respectively. From the
+prestigious [Satoshi Nakamoto Institute](https://nakamotoinstitute.org/) to the
+international [Mi Primer Bitcoin](https://miprimerbitcoin.io/) to the
+student-focused [Summer of Bitcoin](https://www.summerofbitcoin.org/), we are
+proud to have been able to move the needle in regard to worldwide freedom tech
+education.
+
+We hope that educated users will be able to use bitcoin and other freedom tech
+privately, securely, and in a way that empowers them, as opposed to the
+advertisement and surveillance machinery that powers most of the web today. We
+are proud to support projects that ensure that users can have a certain level of
+privacy and security, such as [GrapheneOS](/projects/grapheneos) and [The Tor
+Project](/projects/tor). The former received a sizable grant from us last year,
+the latter received a grant from us this year. [Strengthening network privacy
+with Tor](/blog/tor-receives-support-grant) is crucial, as is the [development
+and maintenance of WireGuard](/blog/jason-donenfeld-lts-grant). We deeply
+believe that everyone should be able to explore and use the internet privately
+and securely and that privacy and free speech must be defended online through
+free software and open networks.
+
+Bitcoin is one of the most powerful open networks to date, and we believe that
+this will remain to be the case for decades to come. By [renewing our commitment
+to bitcoin](/blog/renewing-our-commitment-to-bitcoin) we want to make explicit
+that which should go without saying: we are here to support free and open-source
+projects that help bitcoin flourish, especially those that suffer from the
+tragedy of the commons, such as Bitcoin itself. We will continue to [support
+core developers](/tags/core), whether it’s seasoned veterans or [up-and-coming
+devs](/blog/caring-for-bitcoin-core), as announced in August. If you are a
+developer who wants to quit their soul-sucking fiat job to work on freedom tech,
+don’t hesitate to [apply for funding](/apply).
+
+Our support for these open-source developers and initiatives is only possible
+because of donors like you. We want to express our deep gratitude to everyone
+who donated to [our funds](/funds) as well as our [operations
+budget](/funds/ops). If you like what we do and want to support our work, please
+consider [making a donation](/donate). Thank you.
 
 ## Donations
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+In 2024 we received 929 individual donations for a total sum of $23.6M. The
+largest three were a generous $1,000,000 gift from the [Reynolds
+Foundation](/blog/opensats-receives-one-million-from-reynolds-foundation), an
+incredibly generous $21M donation from
+[#startsmall](/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall),
+and an anonymous donation of $1,000,000 made in bitcoin directly.
+
+As announced at the beginning of the year, OpenSats is to receive [recurring
+donations from Bitwise Bitcoin ETF
+profits](/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb), along with
+Brink and the Human Rights Foundation’s Bitcoin Development Fund. This was
+followed by a [recurring donation commitment from Build Asset
+Management](/blog/donation-commitment-from-build-asset-management), which we
+announced at the end of the second quarter, as well as a recurring commitment
+announced by Cathy Wood, who [pledged to donate a fixed percentage of Ark’s
+revenue to open-source
+contributors](https://njump.me/nevent1qqsqn2s0vekw45jxahy3llcg2k3jxf804kkjma45508w6g8gnht2g4cprpmhxue69uhhyetvv9ujumn0wdmksetjv5hxxmmdqyt8wumn8ghj7un9d3shjtnwdaehgu3wvfskueqpz3mhxue69uhhyetvv9ujuerpd46hxtnfdupzqpxfzhdwlm3cx9l6wdzyft8w8y9gy607tqgtyfq7tekaxs7lhmxfspda99)
+in perpetuity.
+
+We hope to receive multiple commitments of this sort from various entities, as
+the mission and philosophy of OpenSats is to [support bitcoin infrastructure for
+decades](/blog/bitcoin-infrastructure-this-decade) to come, which is why we
+launched [our long-term support
+program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+and aim to be a low-time preference, long-term thinking organization. If you are
+in a position to make such a commitment, please don’t hesitate to [reach out to
+us](/contact).
+
+In terms of amounts received, we are happy to report that we received higher
+amounts via bitcoin directly overall, with over half a million dollars ($
+526,044) received via our “[donate with bitcoin](/donate)” button on our
+website. This is about 4x as much as we received via fiat payment rails ($
+133,050)—excluding the large donations mentioned above. The ratio of on-chain to
+off-chain donations stayed about the same as last year, with ~70% of bitcoin
+payments made using the Lightning Network. In terms of number of donations,
+bitcoin rails continue to dominate.
 
 ![](/static/images/blog/2024-eoy/donations.png)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+The vast majority of donations (~80%) went to our [General
+Fund](/funds/general), with the remainder split about evenly between [The Nostr
+Fund](/funds/nostr) and our [Operations Budget](/funds/ops). In terms of
+amounts, around ~95% of money donated by the general public is directed towards
+our General Fund.
+
+[DONATE TO GENERAL FUND BUTTON]
 
 ## Allocation
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+The purpose of our two funds is to support free and open-source projects that
+are aligned with [our mission](/mission). The [Nostr Fund](/funds/nostr) is
+dedicated towards nostr projects, a protocol that is just coming out of its
+infancy. The [General Fund](/funds/general) is dedicated towards all other free
+and open-source projects and contributors, especially bitcoin-related projects
+and projects that help bitcoin flourish.
+
+As of December 2024, we have allocated over $12M in grants from the General
+Fund, and close to $9M in grants from The Nostr Fund. In terms of money
+allocated [year-over-year](/blog/2023-year-in-review#allocation) this is an
+increase of 67% on the nostr side, and 81% on the bitcoin side. When looking at
+total allocation in USD terms, our two funds are at ~89% and ~52% allocated,
+respectively.
 
 ![](/static/images/blog/2024-eoy/allocation.png)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+As mentioned in last year’s report, we suspect that the distinction between
+“bitcoin” and “nostr” will get more blurry over time, as nostr matures and gets
+integrated into a variety of bitcoin software across the stack. This is already
+happening, especially on the eCash front. Are [Cashu
+addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
+thing, or a nostr thing? Are wallets that use nostr for social payments nostr
+clients, or bitcoin wallets? And what about P2P exchanges that use nostr to
+publish their order books? It is obvious to us that various concepts and
+technologies are currently merging, and we expect this cross-pollination of
+ideas to continue.
+
+With all that said, nostr is still an incredibly young network. It is just
+coming out of its infancy, which is why we will continue to fund experimental
+and exploratory projects from our nostr fund. Before we dive into the nostr fund
+in more detail, let’s have a look at our General Fund and what projects we
+funded in 2024.
 
 ### Bitcoin: General Fund
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
-
-![](/static/images/blog/2024-eoy/lts-grantees.png)
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+Out of the ~$23M donated towards our General Fund during the lifetime of the
+fund, we have allocated ~$12M towards free and open-source projects so far. In
+terms of gross amounts the top five categories that we gave grants to are
+Bitcoin Core, Lightning, eCash, Education, and Privacy.
 
 ![](/static/images/blog/2024-eoy/bitcoin-distribution.png)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+Our support for Bitcoin Core is mostly constituted of long-term support grants
+for core devs, namely:
+[Marco](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
+[Josi](/blog/josi-baker-receives-opensats-lts-grant),
+[Sjors](/blog/sjors-provoost-receives-opensats-lts-grant),
+[Vasil](/blog/vasil-dimov-receives-lts-grant),
+[Gleb](/blog/gleb-naumenko-receives-lts-grant),
+[Furszy](/blog/furszy-receives-lts-grant-for-bitcoin-core),
+[Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core),
+[0xB10C](/blog/0xB10C-receives-lts-grant),
+[Bruno](/blog/bruno-garcia-receives-lts-grant), and
+[Jon](/blog/jon-atack-receives-lts-grant). The last three were added to our LTS
+roster in 2024. In addition to these long-term grants we gave smaller grants to
+[three up-and-coming core developers](/blog/caring-for-bitcoin-core).
+
+On the Lightning side, we are proud to support efforts regarding
+[Splicing](/blog/dusty-daemon-receives-lts-grant),
+[Bolt12](/blog/shashwat-vangani-receives-lts-grant), and [Scaling
+Lightning](/blog/bitcoin-grants-feb-2024#scaling-lightning), as well as projects
+such as [Validating Lightning
+Signer](/blog/bitcoin-grants-july-2024#validating-lightning-signer),
+[Lampo](/blog/8th-wave-of-bitcoin-grants#lampo),
+[smaug](/blog/bitcoin-and-nostr-grants-august-2023#watchdescriptor),
+[BLAST](/blog/bitcoin-grants-feb-2024#blast), [Pickhardt
+Payments](/blog/8th-wave-of-bitcoin-grants#pickhardtpayments-plugin),
+[NLightning](/blog/bitcoin-grants-july-2024-6th-wave#nlightning), [LNP Test
+Framework](/blog/bitcoin-grants-july-2024#lightning-network-protocol-test-framework),
+and two self-custodial Lightning wallets with
+[Blitz](/blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet) and
+[Blixt](/blog/bitcoin-grants-july-2023#blixt-wallet). We are also supporting two
+Lightning researchers with long-term support grants, namely [Matt
+Morehouse](/blog/matt-morehouse-lightning-security-lts-grant) and [René
+Pickhardt](/blog/rene-pickhardt-receives-lts-grant).
+
+Ecash is gaining in both momentum and importance, at least in part due to the
+success and proliferation of nostr. We expect this to continue, which is why we
+gave long-term support grants to [Calle](/blog/cashu-calle-receives-lts-grant)
+for his work on Cashu, as well as
+[m1sterc001guy](/blog/m1sterc001guy-receives-lts-grant) for his work on the
+Fedimint Lightning Gateway. In addition to these long-term support grants, we
+gave grants to [Gonuts](/blog/bitcoin-grants-july-2024-6th-wave#gonuts),
+[eNuts](/blog/bitcoin-grants-july-2024-6th-wave#enuts),
+[Minibits](/blog/bitcoin-grants-september-2024-7th-wave#minibits),
+[Nutmix](/blog/bitcoin-grants-september-2024-7th-wave#nutmix),
+[Nutshell](/blog/8th-wave-of-bitcoin-grants#cashu-nutshell),
+[Macadamia](/blog/bitcoin-grants-july-2024#macadamia), and
+[npub.cash](/blog/nostr-grants-july-2024#npubcash).
+
+Grants from our [Education
+Initiative](/blog/announcing-the-opensats-education-initiative) went to the
+[Satoshi Nakamoto
+Institute](/blog/announcing-the-opensats-education-initiative#satoshi-nakamoto-institute),
+[Mi Primer
+Bitcoin](/blog/announcing-the-opensats-education-initiative#mi-primer-bitcoin),
+[Summer of
+Bitcoin](/blog/announcing-the-opensats-education-initiative#summer-of-bitcoin),
+[Bitcoin Jungle](/blog/second-wave-of-education-grants#bitcoin-jungle), [Bitcoin
+Indonesia](/blog/second-wave-of-education-grants#bitcoin-indonesia),
+[Deciphering
+Bitcoin](/blog/second-wave-of-education-grants#deciphering-bitcoin), [Satsie's
+Pocket Guides](/blog/second-wave-of-education-grants#satsies-pocket-guides),
+[Free Routing
+Africa](/blog/second-wave-of-education-grants#africa-free-routing), [BOB
+Spaces](/blog/second-wave-of-education-grants#bobspaces-residency---cohort-3),
+[BTC Map](/blog/3rd-wave-of-education-grants#btc-map), [Yes Bitcoin
+Haiti](/blog/3rd-wave-of-education-grants#yes-bitcoin-haiti), [Entropy Bitcoin
+Education](/blog/3rd-wave-of-education-grants#entropy-bitcoin-education), and
+[Bitcoin 4all](/blog/3rd-wave-of-education-grants#bitcoin-4all).
+
+Privacy is an absolute necessity for an open society in the electronic age, as
+[Eric Hughes](https://nakamotoinstitute.org/library/cypherpunk-manifesto/) so
+beautifully put it. In addition to [long-term support for
+Wireguard](/blog/jason-donenfeld-lts-grant) and a grant for [The Tor
+Project](/projects/tor), we are proud to have given grants to various projects
+that enhance privacy across all layers of the stack.
+
+The remaining grants from the General Fund were given to
+[Clams](https://github.com/clams-tech),
+[Krux](https://github.com/selfcustody/krux),
+[Vexl](https://github.com/vexl-it/vexl),
+[satsigner](https://github.com/satsigner/satsigner),
+[Bitaxe](https://github.com/skot/bitaxe),
+[Braidpool](https://github.com/pool2win/braidpool/),
+[Utreexo](https://github.com/utreexo/utreexo),
+[Fedimint](https://github.com/fedimint/fedimint),
+[macadamia](https://github.com/zeugmaster/macadamia),
+[Krux-Installer](https://github.com/selfcustody/krux-installer),
+[Krux](https://github.com/selfcustody/krux),
+[Cove](https://github.com/bitcoinppl/cove),
+[secp256k1.swift](https://github.com/21-DOT-DEV/swift-secp256k1),
+[BDK](https://github.com/bitcoindevkit),
+[Labelbase](https://github.com/Labelbase/Labelbase/),
+[Krux](https://github.com/selfcustody/krux),
+[dlcdevkit](https://github.com/bennyhodl/dlcdevkit),
+[Cove](https://github.com/bitcoinppl/cove),
+[StratumV2](https://github.com/stratum-mining/benchmarking-tool),
+[Floresta](https://github.com/vinteumorg/floresta),
+[Vexl](https://github.com/vexl-it/vexl), [LNbits](https://github.com/lnbits),
+[El Tor](https://bitbucket.org/eltordev/eltor), [BTCPay
+Server](https://github.com/btcpayserver), and
+[Raspiblitz](https://github.com/raspiblitz/raspiblitz).
+
+You can read more about these projects in the respective announcements published
+in [February](/blog/bitcoin-grants-feb-2024),
+[June](/blog/bitcoin-grants-july-2024),
+[July](/blog/bitcoin-grants-july-2024-6th-wave),
+[September](/blog/bitcoin-grants-september-2024-7th-wave),
+[October](/blog/8th-wave-of-bitcoin-grants), and
+[December](/blog/renewing-our-commitment-to-bitcoin).
 
 ### Nostr: The Nostr Fund
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+Out of the ~$10M donated towards The Nostr Fund since its inception, we have
+allocated ~$8.9M as of December 2024. This means that our nostr fund is 89%
+allocated in USD terms, with the majority of grants still going to `kind1`
+client projects, as was the case last year. However, we definitely saw “other
+stuff” on the rise this year, with nostr-based app stores, P2P trading systems,
+chat clients, and even website frameworks gaining traction. Media hosting and
+the integration of eCash are trends that we keep a close eye on too, and it’s
+fantastic to see that custom feeds via DVMs—something that was pure
+experimentation last year—are now integrated and ready for prime-time in
+multiple clients. This shift to “other stuff” is apparent in our 2024 allocation
+statistics as well:
 
 ![](/static/images/blog/2024-eoy/nostr-distribution.png)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+As mentioned in the announcements section, we introduced [long-term support for
+nostr developers](/blog/nostr-lts-long-term-support-for-nostr-developers) in
+March 2024. Consequently, around ~35% of The Nostr Fund is allocated towards our
+LTS grantees: [Pablo](/blog/pablofz7-receives-lts-grant),
+[Stuart](/blog/stuart-bowman-receives-lts-grant),
+[hzrd](/blog/hzrd149-receives-lts-grant), [Will](/blog/jb55-receives-lts-grant),
+[Yuki](/blog/yuki-receives-lts-grant),
+[Hodlbod](/blog/hodlbod-receives-lts-grant),
+[fiatjaf](/blog/fiatjaf-receives-lts-grant),
+[Kieran](/blog/kieran-receives-lts-grant),
+[Vitor](/blog/vitor-pamplona-receives-lts-grant),
+[Daniele](/blog/daniele-receives-lts-grant),
+[Alex](/blog/alex-gleason-receives-lts-grant),
+[Mike](/blog/mike-dilger-receives-lts-grant), and
+[Greenart](/blog/greenart7c3-receives-lts-grant).
+
+In addition to these LTS grants we gave grants to the following nostr projects
+this year: [Zapstore](https://github.com/zapstore/zapstore),
+[Camelus](https://github.com/leo-lox/camelus),
+[Mostro](https://github.com/MostroP2P/mostro),
+[nostter](https://github.com/SnowCait/nostter),
+[nostr-php](https://github.com/nostrver-se/nostr-php),
+[Shopstr](https://github.com/shopstr-eng/shopstr),
+[Nostrmo](https://github.com/haorendashu/nostrmo), [Captain's
+Log](https://github.com/nodetec/comet),
+[Osty](https://github.com/ostyjs/create-osty/),
+[Voyage](https://github.com/dluvian/voyage),
+[alphaama](https://github.com/eskema/alphaama), [dart_ndk +
+yana](https://github.com/relaystr/ndk),
+[nostr.build](https://github.com/nostrbuild/nostr.build),
+[nostroots](https://github.com/Trustroots/nostroots),
+[jesterui](https://github.com/jesterui/jesterui),
+[nostr-spring-boot-starter](https://github.com/theborakompanioni/nostr-spring-boot-starter),
+[Seer](https://github.com/Galaxoid-Labs/Seer),
+[nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios),
+[ngit](https://github.com/DanConwayDev/ngit-cli),
+[Whitenoise](https://github.com/erskingardner/whitenoise),
+[futr](https://github.com/futrnostr/futr),
+[Notedeck](https://github.com/damus-io/notedeck),
+[0xchat](https://github.com/0xchat-app),
+[nostr-relay-tray](https://github.com/CodyTseng/nostr-relay-tray),
+[Formstr](https://github.com/abhay-raizada/nostr-forms),
+[Groups](https://github.com/max21dev/groups),
+[nostrability](https://github.com/nostrability),
+[Nostrocket](https://github.com/nostrocket),
+[DVMDash](https://github.com/dtdannen/dvmdash), and
+[Safebox](https://github.com/trbouma/safebox).
+
+[DONATE TO NOSTR BUTTON]
+
+You can read more about these projects in the respective announcements published
+in [July](/blog/nostr-grants-july-2024),
+[August](/blog/nostr-grants-august-2024),
+[September](/blog/7th-wave-of-nostr-grants),
+[November](/blog/8th-wave-nostr-grants), and
+[December](/blog/9th-wave-of-nostr-grants).
 
 ## Grantees
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+We have added about a dozen projects to our list of grantees every month,
+picking up the pace quite a bit as compared to last year. Grantee growth is
+quite stable month over month, with 161 new grants given in 2024 (61 on the
+nostr side, and exactly 100 on the bitcoin side). In total, we have evaluated
+close to 1,000 applications resulting in 232 grants given.
 
 ![](/static/images/blog/2024-eoy/grantees.png)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+As of this writing, we are sending about $1,000,000 worth of bitcoin to our
+grantees every month, something that—thanks to bitcoin—we can do at extremely
+low cost and with very little overhead.
+
+As [mentioned previously](/blog/2023-year-in-review), we hope to support many of
+our grantees for the long term, as long as funding permits and progress remains
+aligned with our mission.
 
 ## Outlook
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum viverra tortor in porta. Phasellus rutrum mollis cursus. Donec pharetra tincidunt diam et rutrum. Nullam venenatis erat nibh, sed varius eros dictum eget. Aliquam pellentesque massa quis eros iaculis pretium. Sed hendrerit faucibus maximus. Cras non neque sit amet mi pulvinar consequat sit amet et dui. Vestibulum laoreet nibh sit amet consectetur lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam viverra dictum eleifend. Mauris id aliquam quam. Donec vel lectus a odio porta laoreet nec vel felis. Sed at ante metus. In ac arcu vel dui sagittis venenatis vel ut tortor. Aliquam fermentum tellus vitae purus cursus finibus. Pellentesque varius felis quis orci efficitur, sed fermentum lectus interdum.
+As we head into the new year, we can’t help but marvel at how far we’ve come.
+Bitcoin is getting more secure, more private, and easier to use by the minute.
+Nostr is shaping up to be the self-sovereign identity layer that the internet so
+desperately lacks, as well as a new paradigm on how to build stuff for the web.
+One that is resistant to censorship and downtime alike; one that has
+pseudonymous identity and lightning-fast payments built in. To say that we are
+bullish would be an understatement; we are exhilarated to see it all come
+together.
+
+But much is still left to be done. Bitcoin, Lightning, and nostr are far from
+perfect, and as these and other protocols are evolving, we will do our best to
+support the projects and builders who are moving the needle. More than that: not
+only do we want to support innovation and improvements, but we first and
+foremost want to make sure that those who are maintaining, reviewing, and
+stress-testing critical infrastructure are taken care of. There are many unsung
+heroes that make all this stuff work, and we are here to support them.
+
+Our generous donors make our support for free and open-source software possible.
+One of our goals for 2025 is to receive multiple recurring commitments to ensure
+that our long-term support programs are well-funded. After all, [our
+mission](/mission) is to maintain a sustainable ecosystem of funding for free
+and open-source projects and contributors, especially bitcoin-related projects
+and projects that help bitcoin flourish. We hope that our track record will
+incentivize those who rely on bitcoin to give to OpenSats periodically, both to
+one of our funds as well as to our operations budget, which we use to
+independently fund our small team. We are one of the few charities that don’t
+take a cut from donations, so if you think we are doing good work and you want
+us to continue to exist, please continue to support us:
+
+[DONATE TO OPS BUDGET BUTTON]
+
+Our hope is to scale our grant-giving efforts considerably going forward, and we
+will share some thoughts on this matter at the beginning of the new year. In the
+best case, we want to see many more organizations like OpenSats, as we believe
+that specialization and a broader support network are paramount as the various
+ecosystems grow and specialize. We don’t have a crystal ball of course, but from
+our perspective, it isn’t hard to imagine that nostr and ecash are here to stay
+and are bound to grow, and it isn’t outlandish to think that open-source
+hardware will gain in importance as well. Bitcoin will remain to be of the
+utmost importance of course, and as it enters the political arena of the world
+stage we expect to see multiple non-profits being created to support open-source
+developers across all kinds of jurisdictions. If you are thinking about creating
+such an organization don’t hesitate to [reach out to us](/contact).
+
+TODO: Final thank you to donors, grantees, applicants, ops, volunteers, and
+everyone who is fighting the good fight.
+
+![](/static/images/blog/2024-eoy/lts-grantees.png)
